k3s/jenkins/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
spec:
  ingressClassName: nginx
  rules: # https://kubernetes.github.io/ingress-nginx/user-guide/ingress-path-matching/
    - host: jenkins.local
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: cluster-ip
              port:
                name: web
